This file documents the revision history for Perl extension Catalyst.

5.60
        - Fixed restarter and -d debug switch in server.pl.
        - Added a warning if you attempt to retrieve a parameter
          using $c->req->params('foo').

5.59    2005-11-30 13:25:00
        - Fixed shebang line for generated scripts
        - Fixed forward to classes ($c->forward(qw/MyApp foo/))
        - Wrap use block in begin to quelch C:C3 warnings
        - Removed scrollbar from debug output
        - Fixed catalyst_par_core() and catalyst_par_multiarch()

5.58    2005-11-24 10:51:00
        - Added ExtUtils::AutoInstall support
	    - Allow overriding path in Catalyst::Helper.
        - Added -makefile to catalyst.pl to generate a new Makefile.PL.
        - Restored Catalyst::Build with a deprecation notice.
        - Improved PAR support
        - Replaced -short with auto-detection
        - Fixed prereqs, added File::Copy::Recursive
        - Static::Simple changes:
            - Made prepare_action play nice with other plugins by not short-
              circuiting.
            - Added tmpl to the ignored extensions.
            - Fixed security problem if req->path contained '..'.

5.57    2005-11-20 22:45:00
        - Updated uri_for to accept undef actions
        - Switched to Module::Install
        - Renamed tests for easier editing
        - Reformatted documentation
        - Renamed -nonew to -force
        - Added PAR support
        - Added keep-alive support and bug fixes to HTTP engine.
          (Sascha Kiefer)
        - Added daemonize option to FastCGI engine. (Sam Vilain)

5.56   2005-11-16 10:33:00
        - Fixed FastCGI engine to not clobber the global %ENV on each
          request. (Sam Vilain)
        - Updated benchmarking to work with detach
        - Fixed dispatcher, so $c->req->action(undef) works again
        - Updated Catalyst::Test to use HTTP::Request::AsCGI
        - Added -pidfile to external FastCGI server.
