@@ -1,6 +1,9 @@
 This file documents the revision history for Perl extension Catalyst.
 
 5.60
+        - Fixed Path and index actions in the appclass,
+          including those that attach to /
+        - Index is now weighted higher than Path
         - Fixed restarter and -d debug switch in server.pl.
         - Added a warning if you attempt to retrieve a parameter
           using $c->req->params('foo').
